After creating HTML & CSS

--- a/index.html
+++ b/index.html
@@ -24,8 +24,57 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&display=swap"
       rel="stylesheet" />
+
+    <link
+      rel="stylesheet"
+      href="style.css" />
   </head>
   <body>
-    <div class="social-profile"> </div>
+    <div class="social-profile">
+      <img
+        class="social-profile__img"
+        src="./assets/images/avatar-jessica.jpeg"
+        alt="Jessica Randall" />
+      <h2 class="social-profile__name">Jessica Randall</h2>
+      <p class="social-profile__country">London, United Kingdom</p>
+      <p class="social-profile__description">"Front-end developer and avid reader."</p>
+      <ul class="social-profile__social-list">
+        <li class="social-profile__social-list-item"
+          ><a
+            href="#"
+            class="social-profile__social-list-link"
+            >Github</a
+          ></li
+        >
+        <li class="social-profile__social-list-item"
+          ><a
+            href="#"
+            class="social-profile__social-list-link"
+            >Frontend Mentor</a
+          ></li
+        >
+        <li class="social-profile__social-list-item"
+          ><a
+            href="#"
+            class="social-profile__social-list-link"
+            >Linkedin</a
+          ></li
+        >
+        <li class="social-profile__social-list-item"
+          ><a
+            href="#"
+            class="social-profile__social-list-link"
+            >Twitter</a
+          ></li
+        >
+        <li class="social-profile__social-list-item"
+          ><a
+            href="#"
+            class="social-profile__social-list-link"
+            >Instagram</a
+          ></li
+        >
+      </ul>
+    </div>
   </body>
 </html>
